tests/fixtures/invalid/bool_notin_bool.py
# Cannot use 'not in' with Bool and Bool
x: bool = True not in True
